# a-star

./: .gitignore  CMakeLists.txt  main.cpp  ДЗ_Егорова_Кемурджиан_Курганов_ИУ8114.pptx
graphics/: main.py  parallel.csv
include/: grid.h  maze.h  structs.h
sources/: grid.cpp  maze.cpp
